// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Reducer Tests State Changes should load city on success of loading 1`] = `
Object {
  "city": Object {},
  "error": undefined,
  "isLoading": false,
}
`;

exports[`Image Reducer Tests State Changes should save error on error of loading 1`] = `
Object {
  "city": undefined,
  "error": "Error",
  "isLoading": false,
}
`;

exports[`Image Reducer Tests State Changes should set city on loadWeatherCurrentSuccessAction 1`] = `
Object {
  "city": Object {
    "coord": Object {
      "lat": 5,
      "lon": 7,
    },
  },
  "error": "Test Error",
  "isLoading": true,
}
`;

exports[`Image Reducer Tests State Changes should set city on loadWeatherForecastSuccessAction 1`] = `
Object {
  "city": Object {
    "coord": Object {
      "lat": 4,
      "lon": 6,
    },
    "population": 27,
  },
  "error": "Test Error",
  "isLoading": true,
}
`;
